<resources>
    <string name="app_name">Tp_Mobile 6</string>
    <string name="titulo">Peliculas</string>
    <string name="item_id">ID: %1$s</string>
    <string name="item_title">TITLE: %1$s</string>
    <string name="item_date">DATE: %1$s</string>
    <string name="item_image">https://image.tmdb.org/t/p/original%1$s</string>
    <string name="image_content_description">Content description</string>
    <string name="error">Error, intentar de nuevo.</string>
    <string name="peliculas_populares">Peliculas Populares</string>
    <string name="title_tp6">TP Mobile 6</string>
    <string name="boton_mostrar_peliculas">MOSTRAR</string>
    <string name="boton_atras">ATRAS</string>
    <string name="error_dialog">Error en la base de datos</string>
    <string name="ok">OK</string>
    <string name="titulo_dialogo">Error</string>
    <string name="descripcion_dialogo">Ocurrio un error en la base de datos</string>
    <string name="boton_dialogo">OK</string>
</resources>